# bagarre

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build-wasm.sh
.github/workflows/: deploy-pages.yml
examples/: basic_match.rs  custom_config.rs
examples/browser/: demo.js  index.html  wasm-loader.js
src/: config.rs  constants.rs  engine.rs  entity.rs  hitbox.rs  input.rs  lib.rs  state.rs  types.rs  wasm.rs
tests/: README.md  e2e_full_fights.rs  e2e_tests.rs  naive_movement_tests.rs  test_left_right_movement.rs
