[package]
name = "bagarre"
version = "0.1.0"
edition = "2021"
authors = ["Bagarre Engine"]
description = "A lightweight fighting game engine in Rust, inspired by Castagne"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
# Core engine has NO dependencies for maximum portability

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Only WASM target needs these minimal bindings
# Commented out for true zero-deps build - uncomment for browser support
# wasm-bindgen = "0.2"
